// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpCenters reducer createHelpCenter action should add a new help center to the state 1`] = `
Object {
  "helpCentersById": Object {
    "1": Object {
      "algolia_api_key": null,
      "algolia_app_id": "",
      "algolia_index_name": "",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "deleted_datetime": null,
      "hotswap_session_token": null,
      "id": 1,
      "name": "ACME Help Center",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_name": null,
      "subdomain": "acme",
      "supported_locales": Array [
        "en-US",
      ],
      "theme": "light",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
  },
}
`;

exports[`helpCenters reducer deleteHelpCenter action should delete a help center from the state 1`] = `
Object {
  "helpCentersById": Object {
    "2": Object {
      "algolia_api_key": null,
      "algolia_app_id": "",
      "algolia_index_name": "",
      "created_datetime": "2021-05-17T18:22:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "de-DE",
      "deleted_datetime": null,
      "hotswap_session_token": null,
      "id": 2,
      "name": "ACME Help Center 2",
      "powered_by_deactivated_datetime": "2021-05-17T18:22:42.022Z",
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_name": null,
      "subdomain": "acme2",
      "supported_locales": Array [
        "en-US",
        "de-DE",
      ],
      "theme": "light",
      "updated_datetime": "2021-05-17T18:22:42.022Z",
    },
  },
}
`;

exports[`helpCenters reducer fetchHelpCenter action should add a new help center to the state 1`] = `
Object {
  "helpCentersById": Object {
    "1": Object {
      "algolia_api_key": null,
      "algolia_app_id": "",
      "algolia_index_name": "",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "deleted_datetime": null,
      "hotswap_session_token": null,
      "id": 1,
      "name": "ACME Help Center",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_name": null,
      "subdomain": "acme",
      "supported_locales": Array [
        "en-US",
      ],
      "theme": "light",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
  },
}
`;

exports[`helpCenters reducer fetchHelpCenters action should add the help centers to the state 1`] = `
Object {
  "helpCentersById": Object {
    "1": Object {
      "algolia_api_key": null,
      "algolia_app_id": "",
      "algolia_index_name": "",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "deleted_datetime": null,
      "hotswap_session_token": null,
      "id": 1,
      "name": "ACME Help Center",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_name": null,
      "subdomain": "acme",
      "supported_locales": Array [
        "en-US",
      ],
      "theme": "light",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "2": Object {
      "algolia_api_key": null,
      "algolia_app_id": "",
      "algolia_index_name": "",
      "created_datetime": "2021-05-17T18:22:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "de-DE",
      "deleted_datetime": null,
      "hotswap_session_token": null,
      "id": 2,
      "name": "ACME Help Center 2",
      "powered_by_deactivated_datetime": "2021-05-17T18:22:42.022Z",
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_name": null,
      "subdomain": "acme2",
      "supported_locales": Array [
        "en-US",
        "de-DE",
      ],
      "theme": "light",
      "updated_datetime": "2021-05-17T18:22:42.022Z",
    },
    "3": Object {
      "algolia_api_key": null,
      "algolia_app_id": "",
      "algolia_index_name": "",
      "created_datetime": "2021-05-17T18:23:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "fr-FR",
      "deleted_datetime": null,
      "hotswap_session_token": null,
      "id": 3,
      "name": "ACME Help Center 3",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_name": null,
      "subdomain": "acme3",
      "supported_locales": Array [
        "en-US",
        "fr-FR",
      ],
      "theme": "light",
      "updated_datetime": "2021-05-17T18:23:42.022Z",
    },
  },
}
`;

exports[`helpCenters reducer updateHelpCenter action should replace an existing help center in the state 1`] = `
Object {
  "helpCentersById": Object {
    "1": Object {
      "algolia_api_key": null,
      "algolia_app_id": "",
      "algolia_index_name": "",
      "created_datetime": "2021-05-17T18:21:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "en-US",
      "deleted_datetime": null,
      "hotswap_session_token": null,
      "id": 1,
      "name": "bar",
      "powered_by_deactivated_datetime": null,
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_name": null,
      "subdomain": "acme",
      "supported_locales": Array [
        "en-US",
      ],
      "theme": "light",
      "updated_datetime": "2021-05-17T18:21:42.022Z",
    },
    "2": Object {
      "algolia_api_key": null,
      "algolia_app_id": "",
      "algolia_index_name": "",
      "created_datetime": "2021-05-17T18:22:42.022Z",
      "deactivated_datetime": null,
      "default_locale": "de-DE",
      "deleted_datetime": null,
      "hotswap_session_token": null,
      "id": 2,
      "name": "ACME Help Center 2",
      "powered_by_deactivated_datetime": "2021-05-17T18:22:42.022Z",
      "primary_color": "#4A8DF9",
      "primary_font_family": "Inter",
      "search_deactivated_datetime": null,
      "self_service_deactivated_datetime": "2021-05-17T18:21:42.022Z",
      "shop_name": null,
      "subdomain": "acme2",
      "supported_locales": Array [
        "en-US",
        "de-DE",
      ],
      "theme": "light",
      "updated_datetime": "2021-05-17T18:22:42.022Z",
    },
  },
}
`;
